# harness-Cu

./: .env.example  .gitignore  README.md  checklist.md  problem-framing.md  pyproject.toml
.cursor/rules/: checklist-before-report.mdc  report-push.mdc
config/: indicators.yaml  sources.yaml  supply_event_rules.yaml  validation_rules.yaml  weights.yaml
dashboard/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css  types.ts
data/audit/: anomalies.json  fetch_log.json
data/clean/: latest.csv
data/forecast/: latest.json
data/raw/: grid_indicators_2026.csv  grid_indicators_from_monitoring.csv  history.csv  inventory_indicators_from_monitoring.csv  live.csv  manual_indicators.csv  metal_inventory_monitor.csv  sample.csv  supply_events.csv  电网指标监控数据_2026-06-29.csv
data/validated/: latest.csv
reports/: latest.md  live.md
reports/runs/: live_2026-06-30_093711.md  live_2026-06-30_171821.md  live_2026-07-01_000405.md  live_2026-07-01_090718.md  live_2026-07-01_100305.md  live_2026-07-02_000713.md  live_2026-07-02_020122.md  live_2026-07-02_023654.md  live_2026-07-02_024123.md  live_2026-07-02_093025.md  (+32 more)
scripts/: check_live_status.py  generate_sample_data.py  import_grid_monitoring.py  import_metal_inventory_monitor.py
tests/: test_collector.py  test_comex_fetcher.py  test_fixes_p0_p1.py  test_forecast_json.py  test_import_metal_inventory.py  test_indicators.py  test_inventory_monitor.py  test_report_path.py  test_scoring.py  test_validator.py  test_yahoo_fetcher.py
(+35 files in other folders)
